--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-T5G2253B');</script>
+<!-- End Google Tag Manager -->
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>شركة الواحة لنقل الأثاث</title>
@@ -74,6 +83,11 @@
 </head>
 <body class="bg-gray-50">
 
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T5G2253B"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
     <!-- 🔝 HEADER SECTION -->
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-3 flex justify-between items-center">
@@ -129,7 +143,7 @@
             <div class="absolute inset-0 hero-gradient"></div>
             <div class="relative z-10 text-center px-4">
                 <h1 class="text-4xl md:text-6xl lg:text-7xl font-extrabold mb-6 drop-shadow-lg">
-                    شركة الواحة لنقل العفش والأثاث
+                    
                 </h1>
                 <p class="text-lg md:text-xl max-w-3xl mx-auto mb-8 drop-shadow-md">
                     نقدم خدمات نقل وتغليف وتركيب الأثاث بأعلى معايير الجودة والاحترافية في جميع أنحاء مصر.
@@ -146,7 +160,7 @@
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                     <!-- Image Column -->
                     <div>
-                        <img src="https://raw.githubusercontent.com/code-house10/01204943457new/refs/heads/main/images/about-1.jpg" alt="فريق العمل" class="rounded-lg shadow-xl w-full">
+                        <img src="https://raw.githubusercontent.com/code-house10/01204943457new/refs/heads/main/images/winch.webp" alt="فريق العمل" class="rounded-lg shadow-xl w-full">
                     </div>
                     <!-- Text Column -->
                     <div class="text-right">
@@ -218,7 +232,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Service Card 1 -->
                     <div class="bg-white rounded-lg shadow-lg overflow-hidden transform hover:-translate-y-2 transition-transform duration-300">
-                        <img src="https://raw.githubusercontent.com/code-house10/01204943457new/refs/heads/main/images/service-2.jpg" alt="تغليف الأثاث" class="w-full h-48 object-cover">
+                        <img src="https://raw.githubusercontent.com/code-house10/01204943457new/refs/heads/main/images/260789793_304036055057323_1914868931504781205_n.jpg" alt="تغليف الأثاث" class="w-full h-48 object-cover">
                         <div class="p-6 text-right relative">
                             <div class="absolute top-0 right-6 -mt-8 bg-white p-2 rounded-full shadow-md">
                                 <i class="fas fa-box-open text-brand-orange text-4xl"></i>
@@ -330,23 +344,23 @@
                     <div class="bg-navy-blue rounded-lg shadow-lg group overflow-hidden">
                         <img src="https://raw.githubusercontent.com/code-house10/01204943457new/refs/heads/main/images/Blue%20and%20White%20Modern%20Real%20Estate%20Instagram%20Post%20(1).jpg" alt="Gallery Image" class="w-full h-56 object-cover transform group-hover:scale-110 transition-transform duration-300">
                         <div class="p-4 text-white">
-                            <h3 class="font-bold">نقل أثاث فيلا بالرياض</h3>
-                            <p class="text-sm text-gray-400">تغليف ونقل كامل مع التركيب</p>
+                            <h3 class="font-bold">فنى مخصص فك وتركيب التكييفات</h3>
+                            <p class="text-sm text-gray-400">فنى مخصص فك وتركيب التكييفات</p>
                         </div>
                     </div>
                     <!-- Gallery Item -->
                     <div class="bg-navy-blue rounded-lg shadow-lg group overflow-hidden">
                         <img src="https://raw.githubusercontent.com/code-house10/01204943457new/refs/heads/main/images/Blue%20and%20White%20Modern%20Real%20Estate%20Instagram%20Post%20(2).jpg" alt="Gallery Image" class="w-full h-56 object-cover transform group-hover:scale-110 transition-transform duration-300">
                          <div class="p-4 text-white">
-                            <h3 class="font-bold">تجهيز مكتب شركة بجدة</h3>
-                            <p class="text-sm text-gray-400">فك وتركيب مكاتب وأثاث مكتبي</p>
+                            <h3 class="font-bold">تغليف شامل</h3>
+                            <p class="text-sm text-gray-400">تغليف شامل مع فك وتركيب</p>
                         </div>
                     </div>
                     <!-- Gallery Item -->
                     <div class="bg-navy-blue rounded-lg shadow-lg group overflow-hidden">
                         <img src="https://raw.githubusercontent.com/code-house10/01204943457new/refs/heads/main/images/Blue%20and%20White%20Modern%20Real%20Estate%20Instagram%20Post%20(3).jpg" alt="Gallery Image" class="w-full h-56 object-cover transform group-hover:scale-110 transition-transform duration-300">
                          <div class="p-4 text-white">
-                            <h3 class="font-bold">نقل شقة سكنية بالدمام</h3>
+                            <h3 class="font-bold">ونش مخصص لرفع وتنزيل العفش</h3>
                             <p class="text-sm text-gray-400">خدمة شاملة من الباب للباب</p>
                         </div>
                     </div>
@@ -354,8 +368,8 @@
                     <div class="bg-navy-blue rounded-lg shadow-lg group overflow-hidden">
                         <img src="https://raw.githubusercontent.com/code-house10/01204943457new/refs/heads/main/images/Blue%20and%20White%20Modern%20Real%20Estate%20Instagram%20Post%20(4).jpg" alt="Gallery Image" class="w-full h-56 object-cover transform group-hover:scale-110 transition-transform duration-300">
                          <div class="p-4 text-white">
-                            <h3 class="font-bold">تخزين عفش لمدة 6 أشهر</h3>
-                            <p class="text-sm text-gray-400">مستودعات آمنة ومراقبة بالكاميرات</p>
+                            <h3 class="font-bold">اسطول سيارات مغلقة لنقل العفش بامان تان</h3>
+                            <p class="text-sm text-gray-400">اسطول سيارات مغلقة لنقل العفش بامان تان</p>
                         </div>
                     </div>
                 </div>
@@ -391,15 +405,15 @@
                     <h4 class="text-xl font-bold mb-4">معلومات الاتصال</h4>
                     <ul class="space-y-3 text-gray-400">
                         <li class="flex items-center justify-end">
-                             <button class="call-btn">01024888950</button>
+                             <button class="call-btn">01204943457</button>
                             <i class="fas fa-phone-alt ml-3 text-brand-orange"></i>
                         </li>
                         <li class="flex items-center justify-end">
-                            <span>info@alwaha-movers.com</span>
+                            <span>info@elwaha.online</span>
                             <i class="fas fa-envelope ml-3 text-brand-orange"></i>
                         </li>
                         <li class="flex items-center justify-end">
-                            <span>01024888950</span>
+                            <span>01204943457</span>
                             <i class="fab fa-whatsapp ml-3 text-brand-orange"></i>
                         </li>
                         <li class="flex items-center justify-end">
@@ -459,9 +473,9 @@
             <div id="modal-step-2" class="hidden">
                 <h3 class="text-2xl font-bold mb-4 text-deep-blue">إضغط للإتصال</h3>
                 <p class="text-dark-gray mb-6">اضغط على الرقم للتحدث مع خدمة العملاء.</p>
-                <a href="tel:01024888950" class="inline-flex items-center justify-center bg-brand-orange text-white font-bold text-2xl py-4 px-8 rounded-full hover:bg-orange-600 transition-colors w-full dir-ltr">
+                <a href="tel:01204943457" class="inline-flex items-center justify-center bg-brand-orange text-white font-bold text-2xl py-4 px-8 rounded-full hover:bg-orange-600 transition-colors w-full dir-ltr">
                     <i class="fas fa-phone-alt mr-3"></i>
-                    01024888950
+                    01204943457
                 </a>
                  <button id="close-modal-btn" class="mt-6 text-light-gray-text hover:text-dark-gray">إغلاق</button>
             </div>
@@ -705,11 +719,11 @@
             
             // Start the cycle after a short delay, only on larger screens
             setTimeout(() => {
-                if (window.innerWidth >= 768) { // Only show on md screens and up
+                if (window.innerWidth <= 768) { // Only show on md screens and up
                    if(reviewContainer) reviewContainer.classList.remove('hidden');
                    startReviewCycle();
                 }
-            }, 5000); // Initial delay before first pop-up
+            }, 1000); // Initial delay before first pop-up
         });
     </script>
 
