--- a/index.html
+++ b/index.html
@@ -454,15 +454,11 @@
             <div>:</div>
             <div><span id="seconds">00</span><span class="text-sm text-white block">ثواني</span></div>
         </div>
-        <!-- Original Button (Triggers Modal) -->
-        <button class="call-btn bg-brand-orange text-white font-bold py-2 px-6 rounded-md hover:bg-orange-600 transition-colors">
-            استفد من العرض
-        </button>
-        <!-- NEW BUTTON ADDED (Direct Call) -->
-        <a href="tel:01204943457" class="bg-white text-brand-orange font-bold py-2 px-6 rounded-md hover:bg-gray-200 transition-colors dir-ltr flex items-center">
+        <!-- NEW BUTTON ADDED (Now triggers modal) -->
+        <button class="call-btn bg-white text-brand-orange font-bold py-2 px-6 rounded-md hover:bg-gray-200 transition-colors dir-ltr flex items-center">
             <i class="fas fa-phone-alt mr-2"></i>
             01204943457
-        </a>
+        </button>
     </div>
 
     <!-- Call Confirmation Modal (Unchanged) -->
